--- a/src/Netpositive/LoginBundle/Resources/config/routing.yml
+++ b/src/Netpositive/LoginBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
 netpositive_login_homepage:
-    path:     /hello/{name}
+    path:     /
     defaults: { _controller: "NetpositiveLoginBundle:Default:index" }
+
