Registration add fullName and phone field service, user Ip log service
-RegistrationType add fullName and phone field,
netpositive.form.registration service
-user Ip log to users table, after login, with
security.interactive_login kernel event
-translations

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,7 +91,7 @@ fos_user:
             enabled:    false # change to true for required email confirmation
             template:   FOSUserBundle:Registration:email.txt.twig
         form:
-            type:               fos_user_registration
+            type:               netpositive_user_registration
             name:               fos_user_registration_form
             validation_groups:  [Registration, Default]
             
