--- a/src/Netpositive/LoginBundle/Resources/config/services.yml
+++ b/src/Netpositive/LoginBundle/Resources/config/services.yml
@@ -1,4 +1,10 @@
 services:
-#    netpositive_login.example:
-#        class: Netpositive\LoginBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    netpositive.form.registration:
+        class: Netpositive\LoginBundle\Form\RegistrationType
+        tags:
+            - { name: form.type, alias: netpositive_user_registration }
+    netpositive.security.login_listener:
+        class: Netpositive\LoginBundle\EventListener\InteractiveLoginListener
+        arguments: ['@fos_user.user_manager', '@request_stack']
+        tags:
+            - { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
