--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,6 +16,8 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
+                always_use_default_target_path: true
+                default_target_path:            /
             logout:       true
             anonymous:    true
         # disables authentication for assets and the profiler, adapt it according to your needs
