--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"sensio/framework-extra-bundle" : "^3.0.2",
 		"incenteev/composer-parameter-handler" : "~2.0",
 		"friendsofsymfony/user-bundle" : "~1.3",
-		"stof/doctrine-extensions-bundle" : "^1.2"
+		"stof/doctrine-extensions-bundle" : "^1.2",
+		"hwi/oauth-bundle": "^0.3.9"
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "~2.3",
