--- a/src/Netpositive/LoginBundle/Resources/config/services.yml
+++ b/src/Netpositive/LoginBundle/Resources/config/services.yml
@@ -8,3 +8,8 @@ services:
         arguments: ['@fos_user.user_manager', '@request_stack']
         tags:
             - { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
+    netpositive.provider.oauth:
+        class: Netpositive\LoginBundle\Security\User\Provider\OAuthUserProvider
+        arguments: ['@fos_user.user_manager', {facebook: facebookId}]
+
+    
